added exception and error messages